<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/searchResult" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="21dp"
        android:onClick="cloudExecution"
        android:text="@string/searchUsingCloud" />

    <Button
        android:id="@+id/searchCommandButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Button01"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView1"
        android:onClick="localExecution"
        android:text="@string/searchLocally" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/searchStringPrompt" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/startTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignRight="@+id/searchCommandButton"
        android:layout_below="@+id/searchResult"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="73dp"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/finishTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTimeValue"
        android:layout_alignRight="@+id/searchCommandButton"
        android:layout_below="@+id/startTimeValue"
        android:layout_marginTop="33dp"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/searchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTimeValue"
        android:layout_alignRight="@+id/searchCommandButton"
        android:layout_centerVertical="true"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>